# contexta

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Makefile  README.md  README_TESTS.md  cursorrules-nextjs.md  docker-compose.yml  docker-entrypoint.sh  env.example  fix_lint.py  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: lint.yml  tests.yml
api/: main.py
core/: __init__.py
core/chunking/: __init__.py
core/embeddings/: __init__.py
core/llm/: __init__.py  base.py  openai.py
core/prompts/: __init__.py  base.py  rag.py
core/reranker/: __init__.py  base.py  simple.py
core/search/: __init__.py
core/vector_store/: __init__.py
ingest/: __init__.py  config.py  main.py  models.py  tasks.py
ingest/chunking/: __init__.py  base.py  semantic.py
ingest/embeddings/: __init__.py  base.py  openai.py
ingest/loaders/: __init__.py  base.py  docx.py  pdf.py  txt.py
ingest/vectorstore/: __init__.py  base.py  qdrant.py
project_docs/: ARCHITECTURE.md  DOCKER_README.md  README.md  README_TESTS.md  TESTING_GUIDE.md
tests/: __init__.py  conftest.py
tests/test_api/: test_main.py
tests/test_core/: test_llm.py  test_prompts.py  test_reranker.py
tests/test_ingest/: __init__.py  test_chunking.py  test_embeddings.py  test_loaders.py  test_vectorstore.py
web/: __init__.py  manage.py
web/authentication/: models.py  serializers.py  tests.py  urls.py  views.py
web/documents/: models.py  serializers.py  services.py  urls.py  views.py
web/documents/migrations/: 0001_initial.py  0002_alter_document_status.py  0003_alter_document_id.py
web/media/: .gitkeep
web/web/: asgi.py  settings.py  urls.py  wsgi.py
